[package]
name = "delaunator-rs"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Maia"]
description = "A Rust implementation of the Delaunator triangulation algorithm"
license = "ISC"
repository = "https://github.com/yourusername/delaunator-rs"
keywords = ["delaunay", "triangulation", "geometry", "webassembly", "wasm"]
categories = ["algorithms", "graphics"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Para suporte WebAssembly
wasm-bindgen = "0.2.90"
js-sys = "0.3.67"
web-sys = { version = "0.3.67", features = ["console"] }
cfg-if = "1.0.0"

# Dependências condicionais
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.40"
criterion = "0.5.1"

[features]
default = []
debug = ["web-sys/console"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true
